<resources>
    <string name="app_name">WhatsApp</string>
    <string name="login_UserName">Username</string>
    <string name="login_Password">Password</string>
    <string name="login_Login">Sign in</string>
    <string name="login_heading">Login</string>
    <string name="login_not_register">Not Register?</string>
    <string name="register_nickname">Nickname</string>
    <string name="register_image">Image</string>
    <string name="register_confirm_password">Confirm Password</string>
    <string name="register_sign_up">Sign up</string>
    <string name="register_already_member">I\'m already member</string>
    <string name="register_upload_image">Upload image</string>
    <string name="regitser_create_new_account">Create New Account</string>
    <string name="chat_enter_message">Enter Message</string>
    <string name="chat_send">Send</string>
    <string name="BaseUrl">http://localhost:5028/api/</string>
    <string name="login_error_Msg">Invalid username or password</string>
    <string name="register_empty_field_msg">All field required</string>
    <string name="register_password_confirmation_msg">The password confirmation does not match.</string>
    <string name="register_password_length_msg">Password needs to be at least 10 characters</string>
    <string name="register_username_taken_msg">Username already taken</string>
    <string name="username">Username</string>
    <string name="nickname">Nickname</string>
    <string name="server">Server</string>
    <string name="web_api_url">localhost:5028</string>
</resources>